Fix time line hidden by overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -38,15 +38,25 @@ ha-card {
   font-size: 14px;
 }
 
-.cell {
-  height: 24px;
+.cell-wrapper {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: var(--normal-bg);
-  color: var(--normal-color);
+  position: relative;
+}
+
+.cell {
+  width: 100%;
+  height: 100%;
   position: relative;
   overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  pointer-events: none;
+  background-color: var(--normal-bg);
+  color: var(--normal-color);
+  height: 24px;
 }
 
 .cell.has-event {
